Fixed compilation error.